--- a/Nodejs-master/package.json
+++ b/Nodejs-master/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.3",
+    "nodemailer": "^6.9.7",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "puppeteer": "^21.4.1",
